force-app/main/default/objects/ccnavmenus__Menu__c/ccnavmenus__Menu__c.object-meta.xml
<CustomObject>
    <label>Menu</label>
    <nameField>
        <label>Menu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>