force-app/main/default/objects/ccnavmenus__Menu__c/fields/ccnavmenus__Cache_Partition__c.field-meta.xml
<CustomField>
    <fullName>ccnavmenus__Cache_Partition__c</fullName>
    <label>Cache Partition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>