force-app/main/default/objects/ccnavmenus__Menu__c/fields/ccnavmenus__Cache_Time_To_Live__c.field-meta.xml
<CustomField>
    <fullName>ccnavmenus__Cache_Time_To_Live__c</fullName>
    <defaultValue>86400</defaultValue>
    <label>Cache Time To Live (in Seconds)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>