force-app/main/default/objects/ccnavmenus__Menu__c/fields/ccnavmenus__Enable_Cache__c.field-meta.xml
<CustomField>
    <fullName>ccnavmenus__Enable_Cache__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Cache</label>
    <type>Checkbox</type>
</CustomField>