force-app/main/default/objects/ccnavmenus__Menu__c/listViews/ccnavmenus__All.listView-meta.xml
<ListView>
    <fullName>ccnavmenus__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>